--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "none"
+    "url": "https://github.com/chingachaguluka/Library-Express.git"
   },
   "keywords": [
     "library",
