Set up EJS templating

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Chinga Chaguluka",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
   "devDependencies": {
