--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mssql": "^4.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
