--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Chinga Chaguluka",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^2.2.25"
